# tfm_curvature

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  qrc_CGAL.cpp  qrc_File.cpp  qrc_Input.cpp  qrc_Triangulation_2.cpp  sfcoborjacienmilnormalizado_mean_curvatura.txt
CGAL_Qt5_moc_and_resources_autogen/: moc_predefs.h
CGAL_Qt5_moc_and_resources_autogen/34EZIPZFLO/: moc_DemosMainWindow.cpp  moc_GraphicsItem.cpp  moc_GraphicsViewInput.cpp  moc_GraphicsViewNavigation.cpp  moc_camera.cpp  moc_frame.cpp  moc_image_interface.cpp  moc_keyFrameInterpolator.cpp  moc_manipulatedCameraFrame.cpp  moc_manipulatedFrame.cpp  moc_qglviewer.cpp
data/: bunnynormalizado.ply  sfcoborjacienmil.ply  three_peaks_normalizado.ply
ficheros/: curvatura_bumpy.txt  curvatura_bunny.txt
glad/: Makefile  cmake_install.cmake
glfw/: Makefile  cmake_install.cmake
glfw/src/: Makefile  cmake_install.cmake
imgui/: Makefile  cmake_install.cmake
include/: funciones_curvature.hpp
src/: funciones_curvature.cpp  laplacian.cpp  main_curvature.cpp  main_gaussian_curvature.cpp  main_mean_curvature.cpp
